worked on readme

--- a/README.org
+++ b/README.org
@@ -14,13 +14,17 @@ NOTE - This script is designed remove itself when run from your home folder.
 
 
 ** Use:
-To use pull the RAW bash script file from github
-  1. ~wget https://raw.githubusercontent.com/GranitePlayground/bootstrap_seed_debian/refs/heads/main/bootstrap_seed_debian.sh~
-  2. ~chmod +x bootstrap_seed_debian.ssh~
-  3. ~bash bootstrap_seed_debian.sh~
+Variables can be changed at the top of the script as needed
+- WARNING - root ssh lockout is default behavior
+- NOTE - This script is designed remove itself after running from your home directory.
+
+1. pull the script from Github
+   - ~wget https://raw.githubusercontent.com/GranitePlayground/bootstrap_seed_debian/refs/heads/main/bootstrap_seed_debian.sh~
+2. ~chmod +x bootstrap_seed_debian.ssh~
+3. ~bash bootstrap_seed_debian.sh~
 
 
-** Todo
+** Todo:
 + add git user info injections
   - ask at beginning
   - inject or default as provided
