--- a/README.org
+++ b/README.org
@@ -4,7 +4,9 @@
 ** About:
 This bash script quickly takes a fresh install of Debian/Ubuntu family Linux to the point of Ansible automation.
   + WARNING - root ssh lockout is default behavior
-*** Actions:
+
+
+** Actions:
 - apt - update and upgrade
 - OpenSSH - Install and configure
   - Block root ssh access
@@ -13,6 +15,7 @@ This bash script quickly takes a fresh install of Debian/Ubuntu family Linux to 
 - Ansible - Install
 - Cleanup - Remove script if run from home folder
 
+
 ** Requirements:
 Debian/Ubuntu family Operating System
 - Internet access
@@ -20,10 +23,11 @@ Debian/Ubuntu family Operating System
 - apt
 - wget
 
+
 ** Use:
 1. Pull the script from Github
-   - ~wget https://raw.githubusercontent.com/GranitePlayground/bootstrap_seed_debian/refs/heads/main/bootstrap_seed_debian.sh~
+   - =( wget https://raw.githubusercontent.com/GranitePlayground/bootstrap_seed_debian/refs/heads/main/bootstrap_seed_debian.sh )=
 2. Check/edit variables at the top of the script
 3. Run script
    - ~bash bootstrap_seed_debian.sh~
-   a. If needed run ~chmod +x bootstrap_seed_debian.sh~ to give execute permissions
+*NOTE:* If needed run ~chmod +x bootstrap_seed_debian.sh~ to give execute permissions
